--- a/MERN TASK MANAGER/backend/package.json
+++ b/MERN TASK MANAGER/backend/package.json
@@ -10,7 +10,7 @@
       "Task manager",
       "Tasks"
     ],
-    "author": "Aayush",
+    "author": "Aditya",
     "license": "ISC",
     "description": "The backend part of simple task manager with user authentication",
     "dependencies": {
